@@ -35,54 +35,4 @@ namespace sente {
         }
     }
 
-    Results::Results(Stone resigningPlayer) {
-        resignedPlayer = resigningPlayer;
-    }
-
-    Results::Results(Rules rules, double komi, unsigned blackTerritory, unsigned whiteTerritory,
-                     unsigned blackStones, unsigned whiteStones){
-        this->rules = rules;
-        this->komi = komi;
-
-        if (rules == CHINESE){
-            this->blackScore = blackTerritory + blackStones;
-            this->whiteScore = whiteTerritory+ whiteStones;
-        }
-        if (rules == JAPANESE){
-            this->blackScore = blackTerritory;
-            this->whiteScore = whiteTerritory;
-        }
-
-        resignedPlayer = EMPTY;
-    }
-
-    Stone Results::winner() const{
-        if (resignedPlayer != EMPTY){
-            return getOpponent(resignedPlayer);
-        }
-        else {
-            return (blackScore > whiteScore + komi) ? BLACK : WHITE;
-        }
-    }
-
-    double Results::margin() const {
-        return fabs(blackScore - whiteScore - komi);
-    }
-
-    Results::operator std::string() const{
-
-      std::stringstream rep;
-      rep << (winner() == BLACK ? "B+" : "W+");
-
-      if (resignedPlayer == EMPTY){
-        rep << margin();
-      }
-      else {
-        rep << "R";
-      }
-
-      return rep.str();
-
-    }
-
 }
