@@ -1,2 +1,0 @@
-(;FF[4]SZ[9]RE[W+7.5]RU[Japanese]
-;B[ci];W[fh];B[be]W[]B[])
